--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "base_public.html" %}
 
-{% block title %}Liceo LMS – Home{% endblock %}
+{% block full_title %}Liceo LMS – Home{% endblock %}
 
 {% block styles %}
 <style>
